@@ -2,9 +2,3 @@ dependencies {
     testImplementation project(':server')
     testImplementation libs.curator.test
 }
-
-if (project.ext.testJavaVersion >= 16) {
-    tasks.withType(Test) {
-        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED'
-    }
-}
